prevent image's height from being distorted

--- a/drugsandme/static/sass/main.scss
+++ b/drugsandme/static/sass/main.scss
@@ -45,6 +45,7 @@ $alt-bg: #f5f5f5;
 img{
   max-width: 100%;
   max-height: 100%;
+  height: inherit;
 }
 
 html{
